First texts and images, next steps to be taken are: Change layout, insert links to the next pages, find better ways to configure divs

--- a/WikiGPC.html
+++ b/WikiGPC.html
@@ -8,14 +8,39 @@
 </head>
 <body>
     <dif class="container1">
-        <h1 class="tituloPrincipal">Guerra Pelos Céus - Wiki</h1>
+        <img src="LogoGPC.png" class="logo">
         <h2> Bem vindo(a) a Wiki-GPC</h2>
-        <img src="LogoGPC.png" class="logo"> 
+        <article>
         <p>
-            Guerra Pelos Céus é um RPG que se passa no mundo mágico chamado de "O Santuário", a história gira em 
+            <strong>Guerra Pelos Céus</strong> é um RPG que se passa no mundo mágico chamado de "O Santuário", a história gira em 
             torno de uma gama de personagens de várias espécies com diversas motivações ao longo das eras. A trama
             principal data de milhares de anos atrás, e suas consequências perduram até os dias de hoje.
         </p>
+        <ul>
+            <h3>Elementos do Universo</h3>
+            <li>
+                Trama Principal
+            </li>
+            <li>
+                Tramas Secundárias
+            </li>
+            <li>
+                Personagens
+            </li>
+            <li>
+                Reinos
+            </li>
+            <li>
+                Espécies
+            </li>
+            <li>
+                Relíquias
+            </li>
+        </ol>
+        </article>
     </dif>
 </body>
+<footer>
+    Guerra Pelos Céus RPG é um projeto sem fins lucrativos ou com direitos reservados.
+</footer>
 </html>
