First page created, links inserted to navigate between both of them, css archives divided, background image put in the images folder

--- a/WikiGPC.html
+++ b/WikiGPC.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleWikiGPC.css">
     <title>WikiGPC</title>
 </head>
 <body>
     <dif class="container1">
-        <img src="LogoGPC.png" class="logo">
+        <img src="Imagens/LogoGPC.png" class="logo">
         <h2> Bem vindo(a) a Wiki-GPC</h2>
         <article>
         <p>
@@ -23,6 +23,9 @@
             </li>
             <li>
                 Tramas Secundárias
+            </li>
+            <li>
+                <a href="Criadores.html">Criadores</a>
             </li>
             <li>
                 Personagens
