tried fixing issues related to github pages

--- a/Criadores.html
+++ b/Criadores.html
@@ -12,7 +12,7 @@
         eles que definiram desde o primeiro instante de existência do universo o que significa a palavra "Poder".</strong>
         -Simon Elfara
     </h1>
-    <a href="index.html">Página principal</a>
+    <a href="WikiGPC.html">Página principal</a>
     <h3>Criadores</h3>
     <article>
         <p>Criadores (a.k.a estrelas) são os pilares da criação do universo, seres com poderes inimagináveis capazes 
