Github pages is finally working, uptaded texts,fixed issue where background wouldn't cover the entire screen

--- a/Criadores.html
+++ b/Criadores.html
@@ -8,17 +8,31 @@
 </head>
 <body>
     <h1 class="Citacao"><strong>"Eles nos vêem de cima, de um lugar em que nossas mentes quebrariam antes mesmo de tentarmos
-        compreender, um plano onde os desejos e vontades se manifestam com o mesmo esforço que temos pra respirar. São
+        compreender, um plano onde os desejos e vontades se manifestam com o mesmo esforço que temos pra dar um respiro. São
         eles que definiram desde o primeiro instante de existência do universo o que significa a palavra "Poder".</strong>
         -Simon Elfara
     </h1>
     <a href="index.html">Página principal</a>
     <h3>Criadores</h3>
     <article>
-        <p>Criadores (a.k.a estrelas) são os pilares da criação do universo, seres com poderes inimagináveis capazes 
+        <h2>Informações Básicas</h2>
+        <p>
+            Criadores (a.k.a estrelas) são os pilares da criação do universo, seres com poderes inimagináveis capazes 
             de manifestar absolutamente qualquer coisa que seja desejo deles. Tamanho poder vêm acompanhado de 
             um racional diferente do que estamos habituados, suas vontades parecem ser completamente instintivas e seus
-            motivos são misteriosos. O primeiro de todos os criadores só expressou um desejo durante toda a sua
+            motivos são misteriosos.
+        </p>
+        <p>
+            Os criadores mudaram muito ao longo das eras, à medida que o tempo passava, a influência deles sobre
+            os aspectos da realidade foi ficando cada vez mais nichada a conceitos específicos
+        </p>
+        <hr>
+
+        <h2>História dos Criadores</h2>
+
+        <h5>Era de Tiamat</h5>
+        <p>
+             O primeiro de todos os criadores só expressou um desejo durante toda a sua
             existência: Preencher o vazio, sendo assim, ele se fragmentou em incontáveis outros criadores, que 
             carregavam sua vontade incial de preencher o universo.
         </p>
@@ -28,12 +42,14 @@
             conhecemos como Santuário. Ela criou a terra, as nuvens e o tempo, mas ela percebeu que lhe faltava algo. Tiamat
             não podia avaliar sua própria criação, ela não podia ser juíza do que ela mesma fez, não havia uma métrica definir
             se sua criação merecia preencher o espaço. Foi então que ela teve a ideia de se fragmentar em duas. Porém, suas estrelas 
-            filhas deveriam seguir regras para que sua criação se mantenha erguida, e então ela criou um Domo ao redor do Santuário.
+            filhas deveriam seguir regras para que sua criação se mantivesse erguida, e então ela criou um Domo ao redor do Santuário.
             Este domo, era capaz de impedir com que até mesmo ela pudesse manifestar destruição diretamente sobre a superfície
             do Santuário. Contente com a sua linha de defesa, ela então se dividiu.
         </p>
+        <h5>Era de Kahrma e Sut'uun</h5>
         <p>
-            Kahrma e Sut'uun
+            Kahrma e Sut'uun foram as estrelas que surgiram à partir de Tiamat, e juntos eles desenvolveram o santuário até o surgimento
+            da vida (Leia mais sobre o desenvolvimento do Santuário nas páginas de Kahrma e Sut'unn)
         </p>
     </article>
 </body>
