--- a/Criadores.html
+++ b/Criadores.html
@@ -48,8 +48,25 @@
         </p>
         <h5>Era de Kahrma e Sut'uun</h5>
         <p>
-            Kahrma e Sut'uun foram as estrelas que surgiram à partir de Tiamat, e juntos eles desenvolveram o santuário até o surgimento
-            da vida (Leia mais sobre o desenvolvimento do Santuário nas páginas de Kahrma e Sut'unn)
+            Kahrma e Sut'uun foram as estrelas que surgiram à partir de Tiamat, os dois criaram o primeiro laço entre
+            dois indivíduos no nosso mundo, seja amizade, amor, paternidade, a ligação que eles tinham era de simultaneamente
+            irmandade por compartilharem o mesmo progenitor, quanto de carinho por estarem lá um pelo outro em meio a um mundo
+            tão vazio. Primeiro, as montanhas e o fogo surgiram por vontade de Sut'uun, os rios e os ventos por vontade de Kahrma,
+            e assim foi se fazendo o Santuário.
+        </p>
+        <p>
+            Porém, à medida que eles criavam as maravilhas do planeta, mais e mais eles se viam influenciados pelas
+            suas próprias criações, as montanhas deixaram ambos mais ambiciosos, com a fome de criar coisas grandes e 
+            resilientes; as marés fizeram com que ambos quissesem criar ilhas e arquiélagos, para que a beleza de cada 
+            obra ficasse isolada das outras. Mas foi quando Kahrma criou a vida que tudo mudou.
+        </p>
+        <p>
+            As primeiras plantas fizeram com que ambos conhecessem a luta pela sobrevivência, a disputa por recursos e
+            espaço fez com que as estrelas se tornassem rivais. Disputando por quem teria a melhor posição abaixo do sol,
+            quem teria o jardim mais próximo ao leito dos rios, as florestas mais densas e as flores mais bonitas.
+        </p:>
+        <p>
+            
         </p>
     </article>
 </body>
