More texts, changed the logo to a better one without transparent letters, put a star next to the Basic Info on the criadores page

--- a/Criadores.html
+++ b/Criadores.html
@@ -15,13 +15,16 @@
     <a href="index.html">Página principal</a>
     <h3>Criadores</h3>
     <article>
-        <h2>Informações Básicas</h2>
+        <div class="tituloComImagem">
+        <h2>Informações Básicas</h2> 
+        <img src="Imagens/estrelaRemoveBG.png" alt="estrela">
+        </div>
         <p>
             Criadores (a.k.a estrelas) são os pilares da criação do universo, seres com poderes inimagináveis capazes 
             de manifestar absolutamente qualquer coisa que seja desejo deles. Tamanho poder vêm acompanhado de 
             um racional diferente do que estamos habituados, suas vontades parecem ser completamente instintivas e seus
             motivos são misteriosos.
-        </p>
+        </p> 
         <p>
             Os criadores mudaram muito ao longo das eras, à medida que o tempo passava, a influência deles sobre
             os aspectos da realidade foi ficando cada vez mais nichada a conceitos específicos
