--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <dif class="container1">
-        <img src="Imagens/LogoGPC.png" class="logo">
+        <img src="Imagens/LogoGpcSemBG.png" class="logo">
         <h2> Bem vindo(a) a Wiki-GPC</h2>
         <article>
         <p>
