Added new texts on Criadores tab, added a new page for documents, fixed a few bugs

--- a/Criadores.html
+++ b/Criadores.html
@@ -66,10 +66,22 @@
         <p>
             As primeiras plantas fizeram com que ambos conhecessem a luta pela sobrevivência, a disputa por recursos e
             espaço fez com que as estrelas se tornassem rivais. Disputando por quem teria a melhor posição abaixo do sol,
-            quem teria o jardim mais próximo ao leito dos rios, as florestas mais densas e as flores mais bonitas.
-        </p:>
+            quem teria o jardim mais próximo ao leito dos rios, as florestas mais densas e as flores mais bonitas. Com os animais,
+            eles conheceram a caça, o sangue a carne, foi quando eles conheceram a dor.
+        </p>
         <p>
-            
+            Foi quando Kahrma criou a primeira espécie inteligente -os humanos- que Sut'uun fez uma proposta a Kahrma: Abandonar
+            as rivalidades e reconstruir um santuário sem vida. Para Sut'uun, suas criações tinham influenciado a ele e Kahrma de forma
+            que se continuassem com a disputa, eles jamais seriam parceiros como antes. Embora eles não pudessem simplesmente apagar
+            a vida por conta do domo, eles poderiam criar predadores naturais para todas as espécies, ou provocar condições naturais não 
+            favoráveis no ambiente. Mas Kahrma recusou, essa decisão não veio de ódio contra a estrela rival, mas sim por amor a suas criações.
+            Kahrma enxergou nos humanos algo além da violência e da brutalidade, ela viu que também eram uma raça capaz de amar, de sentir, de coexistir,
+            essa visão deu a Kahrma uma nova ótica a suas criações como um todo, ela enxergou nelas o que tinha perdido com sua estrela amiga.
+        </p>
+        <h5>Guerras de Santa Kahrma e Lorde Sut'uun</h5>
+        <p>
+            Assim, Sut'uun declarou guerra a sua antiga amiga, ele declarou que o norte do Santuário seria seu, para criar um exército capaz destruir
+            toda a vida no santuário, ele fez com que as terras ao norte se tornassem o mais inabitáveis quanto possível.
         </p>
     </article>
 </body>
