Fused all css archives into one style.css, put all links under the same properties, added specific divs in all pages (containerIndex/Criadores/Docs), improved some margins and paddings. Now, it would be better to make sure the links in the docs page work

--- a/Criadores.html
+++ b/Criadores.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styleCriadores.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+<div class ="containerCriadores">
 <body>
-    <h1 class="Citacao"><strong>"Eles nos vêem de cima, de um lugar em que nossas mentes quebrariam antes mesmo de tentarmos
+    <h1 class="Citacao">
+        <strong>"Eles nos vêem de cima, de um lugar em que nossas mentes quebrariam antes mesmo de tentarmos
         compreender, um plano onde os desejos e vontades se manifestam com o mesmo esforço que temos pra dar um respiro. São
         eles que definiram desde o primeiro instante de existência do universo o que significa a palavra "Poder".</strong>
         -Simon Elfara
     </h1>
-    <a href="index.html">Página principal</a>
+    <a href="index.html">Página principal</a> 
     <h3>Criadores</h3>
     <article>
         <div class="tituloComImagem">
@@ -85,4 +87,5 @@
         </p>
     </article>
 </body>
+</div>
 </html>
