--- a/Documentos.html
+++ b/Documentos.html
@@ -4,25 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styleCriadores.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<a href="index.html">Página Inicial</a>
+<div class="containerDocs">
 <body>
+    <a href="index.html">Página principal</a>
     <article>
         <h1>Documentos:</h1>
-        <p>
+        <ol>
+        <li>
             Primeiro diário de Simon Elfara: https://docs.google.com/document/d/1E4uTJ62MwKhF1Jw3Z47d7EhGcM3CVyrWebBbcwsCE9s/edit?tab=t.0
-        </p>
-        <p>
+        </li>
+        <li>
             Segundo diário de Simon Elfara: https://docs.google.com/document/d/1_Wny_-rpe_yC4TVlPkuJkJ9YJ3EwS8Ec5e_TMeMFHEE/edit?tab=t.0
-        </p>
-        <p>
+        </li>
+        <li>
             Terceiro diário de Simon Elfara: https://docs.google.com/document/d/1JpIgkeTiF_YIG_lq75X8eMObv_cxr14fCKhpwhWF6sw/edit?tab=t.0
-        </p>
-        <p>
+        </li>
+        <li>
             Chimerari: https://docs.google.com/document/d/1SL_VYG3Is8ZaHHr0wvcEssmegexBQG8uFg1M2k3rUe0/edit?tab=t.0
-        </p>
+        </li>
+        </ol>
     </article>
-    
+</div>
 </body>
 </html>
