--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleWikiGPC.css">
+    <link rel="stylesheet" href="style.css">
     <title>WikiGPC</title>
 </head>
 <body>
-    <dif class="container1">
+    <dif class="containerIndex">
         <img src="Imagens/LogoGpcSemBG.png" class="logo">
         <h2> Bem vindo(a) a Wiki-GPC</h2>
         <article>
