Added a ordered list in order to list every criador in collumns

--- a/Criadores.html
+++ b/Criadores.html
@@ -32,7 +32,55 @@
             os aspectos da realidade foi ficando cada vez mais nichada a conceitos específicos
         </p>
         <hr>
-
+        <h2>Lista de Criadores</h2>
+        <ol class="listaCriadores">
+            <li>
+                Tiamat 
+            </li>
+            <li>
+                Kahrma
+            </li>
+            <li>
+                Sut'uun
+            </li>
+            <li>
+                Liliette (Vida)
+            </li>
+            <li>
+                Nerthos (Morte)
+            </li>
+            <li>
+                Garuda (Sangue e da Carne)
+            </li>
+            <li>
+                Aivy (Natureza)
+            </li>
+            <li>
+                Indra (Fogo)
+            </li>
+            <li>
+                Niviel (Gelo)
+            </li>
+            <li>
+                Anahita (Água)
+            </li>
+            <li>
+                Mãe Vermelha (Terra)
+            </li>
+            <li>
+                Varin(Vento)
+            </li>
+            <li>
+                Ligia (Saúde)
+            </li>
+            <li>
+                Morphegos (Peste)
+            </li>
+            <li>
+                Zarion (Ordem e conhecimento)
+            </li>
+        </ol>
+        <hr>
         <h2>História dos Criadores</h2>
 
         <h5>Era de Tiamat</h5>
